5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1674_1105.log
== TEST (2019-04-25 10:48:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
if desc == (x="lobo"):
	print("Entrada: ",desc)
	print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 4
    if desc == (x="lobo"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = "lobo" if desc == "lobo":

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 4
    x = "lobo" if desc == "lobo":
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = "lobo" if desc == "lobo"

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 4
    x = "lobo" if desc == "lobo"
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:52:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = "lobo" if (desc == "lobo")

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 4
    x = "lobo" if (desc == "lobo")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:52:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = "lobo" if desc == ("lobo")

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 4
    x = "lobo" if desc == ("lobo")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:52:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = "lobo" if (desc == ("lobo"))

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 4
    x = "lobo" if (desc == ("lobo"))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:53:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ("lobo") if (desc == ("lobo"))

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 4
    x = ("lobo") if (desc == ("lobo"))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:54:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = "lobo" if desc == "lobo"

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 4
    x = "lobo" if desc == "lobo"
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:55:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = "lobo" if desc == "lobo" else x = ""

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 4
    x = "lobo" if desc == "lobo" else x = ""
       ^
SyntaxError: can't assign to conditional expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:55:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x =""
x = "lobo" if desc == "lobo" else x = ""

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 5
    x = "lobo" if desc == "lobo" else x = ""
       ^
SyntaxError: can't assign to conditional expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()

x = "lobo" if desc == "lobo" else ""

print("Entrada: ",desc)
print("Casa: ",x)
	
-- OUTPUT:
Entrada:  lula
Casa:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()

x = "Stark" if desc == "lobo" else ""

print("Entrada: ",desc)
print("Casa: ",x)
	
-- OUTPUT:
Entrada:  lula
Casa:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()

x = "Stark" if desc == "lobo"

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 5
    x = "Stark" if desc == "lobo"
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()

x = "Stark" if desc == "lobo" else

print("Entrada: ",desc)
print("Casa: ",x)
	
-- ERROR:
File "XXXX", line 5
    x = "Stark" if desc == "lobo" else
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else ""
x = "Lannister" if desc == "leao" and x ==""  else ""
x = "Baratheon" if desc == "veado" and x ==""  else ""
x = "Targaryen" if desc == "dragao" and x ==""  else ""
x = "Tyrell" if desc == "rosa" and x ==""  else ""
x = "Martell" if desc == "sol" and x =="" else ""
x = "Greyjoy" if desc == "lula" and x ==""  else ""
x = "Bolton" if desc == "esfolado" and x ==""  else ""
x = "Tully" if desc == "turta" and x ==""  else ""

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:05:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input()
x = ""
x = "Stark" if desc == "lobo" and x ==""  else x
x = "Lannister" if desc == "leao" and x ==""  else x
x = "Baratheon" if desc == "veado" and x ==""  else x
x = "Targaryen" if desc == "dragao" and x ==""  else x
x = "Tyrell" if desc == "rosa" and x ==""  else x
x = "Martell" if desc == "sol" and x =="" else x
x = "Greyjoy" if desc == "lula" and x ==""  else x
x = "Bolton" if desc == "esfolado" and x ==""  else x
x = "Tully" if desc == "turta" and x ==""  else x

print("Entrada: ",desc)
if x != "":
	print("Casa: ",x)
else:
	print("Brasao invalido")
	
-- EXECUTION TIME:
0.225938
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
